--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="preconnect" href="https://jsonplaceholder.typicode.com" crossorigin>
+  <meta content="My awesome title" property="og:title" />
+  <meta content="Web Fundamentals training" property="og:site_name" />
+  <meta content="This is an awesome website. Please do visit it. I assure you it isn't a click bait. :D" property="og:description" />
+  <!-- <meta content="Awesome title" property="og:title" /> -->
 </head>
 <body>
   <div style="display: flex;">
