Added image too

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="preconnect" href="https://jsonplaceholder.typicode.com" crossorigin>
-  <meta content="My awesome title" property="og:title" />
-  <meta content="Web Fundamentals training" property="og:site_name" />
-  <meta content="This is an awesome website. Please do visit it. I assure you it isn't a click bait. :D" property="og:description" />
-  <!-- <meta content="Awesome title" property="og:title" /> -->
+  <meta property="og:title" content="My awesome title"  />
+  <meta property="og:site_name" content="Web Fundamentals training"  />
+  <meta property="og:description" content="This is an awesome website. Please do visit it. I assure you it isn't a click bait. :D"  />
+  <meta property="og:image" content="https://web-fundamentals-training.herokuapp.com/Amazing-Butterfly-PNG.png"  />
+  
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="My awesome title" />
+  <meta name="twitter:description" content="This is an awesome website. Please do visit it. I assure you it isn't a click bait. :D" />
+  <meta name="twitter:image:src" content="https://web-fundamentals-training.herokuapp.com/Amazing-Butterfly-PNG.png" />
 </head>
 <body>
   <div style="display: flex;">
